[package]
name = "solders-rpc-txs-for-address-config"
version = { workspace = true }
edition = { workspace = true }
include = ["/src"]
license = { workspace = true }
repository = { workspace = true }
description = "Solders RPC getTransactionsForAddress config crate."

[dependencies]
pyo3 = { workspace = true, features = ["macros"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
solders-commitment-config = { workspace = true }
solders-macros = { workspace = true }
solders-signature = { workspace = true }
solders-traits-core = { workspace = true }
solders-transaction-status-enums = { workspace = true }
